# ChangeLog for dev-python/django
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.119 2013/10/22 11:43:30 grobian Exp $

  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> django-1.5.4.ebuild:
  Marked ~x64-macos, bug #487670

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> django-1.4.8.ebuild:
  Stable for x86, wrt bug #484984

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> django-1.4.8.ebuild:
  Stable for amd64, wrt bug #484984

  16 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> -django-1.2.7.ebuild,
  -django-1.3.7.ebuild:
  Remove old, vulnerable django versions.

*django-1.5.4 (15 Sep 2013)

  15 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> +django-1.5.4.ebuild,
  +files/django-1.5.4-objects.patch:
  Version bump django to 1.5.4.

  15 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> -django-1.3.2.ebuild,
  -django-1.3.4.ebuild, -django-1.4.1.ebuild, -django-1.4.2-r2.ebuild,
  -django-1.4.2.ebuild, -django-1.5-r1.ebuild:
  Remove old versions.

*django-1.4.8 (15 Sep 2013)

  15 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> +django-1.4.8.ebuild:
  Version bump django to 1.4.8.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> django-1.2.7.ebuild,
  django-1.3.7.ebuild, django-1.4.2-r2.ebuild, django-1.4.5.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  09 Jun 2013; Mike Gilbert <floppym@gentoo.org> django-1.2.7.ebuild,
  django-1.3.2.ebuild, django-1.3.4.ebuild, django-1.3.7.ebuild,
  django-1.4.1.ebuild, django-1.4.2-r2.ebuild, django-1.4.2.ebuild,
  django-1.4.5.ebuild, django-1.5-r1.ebuild:
  Depend on virtual/python-imaging.

  02 Jun 2013; Mike Gilbert <floppym@gentoo.org> django-1.5.1.ebuild,
  django-9999.ebuild:
  Cleanup webapp.eclass usage.

  01 Jun 2013; Mike Gilbert <floppym@gentoo.org> django-1.5.1.ebuild,
  django-9999.ebuild:
  Convert to virtual/python-imaging.

*django-1.2.7 (29 May 2013)
