@@ -5,21 +5,19 @@ AUX django-1.3.1-djangodocs_extension.patch 1879 SHA256 fbf7b2383f18f03755f30fe9
 AUX django-1.5-objects.patch 1470 SHA256 6b0ce991c1b9c97d642faf9f5aa554796c2fdec52cc0f78b6447626a4f9f6816 SHA512 c82592ba39b121111c86d8713a24e6120a27991e057f9c034722e2054ff51a09e4cdce997a9059245a602c9343ab8b8930e14cb36cfd088da2b5e44e11d13cc4 WHIRLPOOL 84bd83ae54f8cd62dec2973e064511814205789fd8031fb6ad142bf0e865f4af32e34dfcb1bf82476a2e0e58df75ed6424d646fc618c353dedf8015f0c2bdb70
 AUX django-1.5-py3tests.patch 959 SHA256 62fbb00c8d919306b48c8fcc82c7fa5e8aa38589f5271c526757da0ff2acbaa7 SHA512 cc746d43c2cc1c7f88fbffbf07ffc1f3b3fdcb738547658623c763e302c69372f8c8c014ac2a7196382d21aee0ba2ede92860a59a76ad3e14541015969935a92 WHIRLPOOL 4da24b4006ff233fea8041127a2842485d7d178d5abba2b429f537a66feb21384a59678188451089429af355118f06fc7083cbdd61d12905f9dfdb4e831d668b
 AUX django-1.5.4-objects.patch 1467 SHA256 237d0ee4e9f2af1d98b0b230977a41d061cbdbefc153193bc1539c4ad82622ee SHA512 09bdaab452f692679a15d0fbadf3c044417aeda0ce65b30bd2994d86b33ae93c13eb159fdad373a031ab2e0563861e29d1f9935b52c33af34a6afd25461e904d WHIRLPOOL d8a18947bd826c28836ce5180a6f9de758722fcc45ba11ca6a887c65711e7fa23827dcab734b6bfe51c330dd05a2d67a5d82e6e2d85130cdb05fcb4ca0622f26
-DIST Django-1.4.5.tar.gz 7735582 SHA256 0e1e8c4217299672bbf9404994717fca2d8d4b7a4f7b8b3b74d413e1fda81428 SHA512 7bcd45777be191cf5a45dbd09e1d026a2b5a796227a853d0570be58b3bd1172396b12632762deea267ce34df4ea547630740fdb4b795fad7cc4f53ab309c0d44 WHIRLPOOL 723bc0a2e93f3b22fde7d65c971a3b58c828bbd96c6738df0546dc17256406930a648ad3b29f2ed627ab11e422dbcf27cf9b11eed0b022e3576bcc176fec7c9d
 DIST Django-1.4.8.tar.gz 7743397 SHA256 b9c356411af17dd9017081c884065976745659b3ab0e80493d0656911f920a2d SHA512 f2f0ed16308a9c2559be093f213fb6fef6f7afb4ceed54ee176167baa73191272da2a48c342ac4eb7d582dafe8052ef5c9246b62c2298f16c32ac119d16f7c5e WHIRLPOOL 6f275ba2bde4bce6714ca38290fa82b9713701dd5bad813508f0bee9c9d40c7b3ac14976f0b026e7ac06d61795edb434ab2d9666257f5bd5817f0e7f61a0d845
-DIST Django-1.5.1.tar.gz 8028963 SHA256 885fadcbb8963c0ccda5d9d2cca792970b0289b4e662406b2de2b736ff46123d SHA512 75304cf4a09688af4460dfc1de902cd3455003c76f8673a16a781fc738d2ddfa61ba62768e3be84b017c042696f90e950ec1855df9871be846fcc82df5da2580 WHIRLPOOL 32366c6fb5a8fc3b54746aca4843fcb3aab571830d77475a6c68e62117fb2f9b3cdbb0842c43be6dfe2093cc16fa79d050a21be7a2421b3e94bacc4c17d2e424
 DIST Django-1.5.4.tar.gz 8050758 SHA256 428defe3fd515dfc8613039bb0a80622a13fb4b988c5be48db07ec098ea1704e SHA512 daa4b5f8189446feefc168fd618a7cb2bea710b83066e0ec740f7596988107b5da45f2150fc99efd2095356bf87f2c0750d486e8c9b006b6d61468de8fbef748 WHIRLPOOL fe78575bb8b717261cb588deddc80534d70f8d147e807ad6364eaa5d2e785cd076c19be22c54ef602ee4e37d82ee54150788ea8237b19bf48b0b0e3bab3b5eb5
-EBUILD django-1.4.5.ebuild 2776 SHA256 6647b6c42297c5eab4bf1ac9266d0454cdb75d93a4372997e916cb69423bdd68 SHA512 72849c367377b9549eaa1c4060d6f183cc42209f2ff46226ec290fce8be3e86ef01cc109c59ac104a42cd9d95d749a4aa15bdb39a1c73e07ce98abc397b56cd4 WHIRLPOOL ca1bfdd9564da4319f902c2a675f0b93a3cb400049067aa6e1b686ed135f2338b4a6edecf3a33795df49f8e8bfb34ba62afbfa458bfa5f37610b49103dc5e91d
 EBUILD django-1.4.8.ebuild 2777 SHA256 ff11e4c9a6ed8447f6f3ed78d587b589a2949568fb443b0566d17445db872d6d SHA512 c05f6e5ab15f353ea32ece242caa3f487f0d031793b27f7f791d1d2daa6404f7f4b5b11e56f342e1066bb77a963a7b558e336092edbbd409e1d10c7b6040d3b4 WHIRLPOOL 6efcd3fd4cd1b7831e7a3b16fea28ffbfb1c11b0e91bccb513a60832a9f66bfc9b457608a694b2026fb284d3c575b7a81bbcb2bd9f4fc187eb7145b7dc93d8a0
-EBUILD django-1.5.1.ebuild 2378 SHA256 64454ec304a6afd86e3cd8728872d49c4118b51bf085a5e3df175abf7dd21e08 SHA512 e4591034c15860c6205f28dbeed751a57131e16a5633a273948b35dea23eee5c4516549da95909e1da4f503e6f15a2b83ce9796306ba4d69d0920ebef75dc35b WHIRLPOOL a076ea96b20811608b1ba616f9e9fb045b4d417166fe23dafd655f1d95e6dbd88dc4eb594d08ee49c660c2634d1f8cb4e4fd0d01e95f9234224c0139afb2f3aa
 EBUILD django-1.5.4.ebuild 2391 SHA256 0e1e520adc04c15d291517d5688ae8c8ff87d2172426399182dd690499196ef7 SHA512 d8745436b9f62093b01489c9182db79cc364b127134f5d7da7071ceb07030c68fcbda462d52ec93da2710a2592e105af54411217e1d968d0c3b0b4b8987a4ecd WHIRLPOOL d50713b3c8a5caa4ac10ee87e6ecef78fc2a6a1f2cdcd7b8afde6b13d501a74dba866c3def43283c72cd4789ea1094e58869af48e47d953e4058442444942905
 EBUILD django-9999.ebuild 2378 SHA256 7bab217e56b3cbafc16f45b32462afc0ad791658c123df2100e2336622332fcc SHA512 bc2a6a3217627133b74115c02f93eaf71b250f410f39f433baf86da74dd45bc7c8b191b10fa40ef299f1f9a98f0a12f223953c6050321f246052a2ce90cf588f WHIRLPOOL fecb6f73ff804f70c468ffa79d64f12aa5960c171f61be323bbf0a5cfde35c042752bf8e61c3af1b1a50ab64002c675120381f4412a3fb37d0861efa1d14dd43
-MISC ChangeLog 18393 SHA256 3f3d322028be81c66b32f7828a90e3a196879138015f3fe931003acc2b581829 SHA512 9abd1f01e1b2240b10a9bd16080976a60ef4b7083d2fddd8182771e8781dbb78f7d4e34e00c09903cdaac2ca7b2645ee284a3c82cfe7c6dceb0c5e072d90f4a4 WHIRLPOOL 1a29d383c7a409c22b4c3a443c899e571f937d5e67066fc469fbd812a5d068c95a42c168f44c4e153b43458cd8fcd32a490a6cbc87d1eb5a10c14e5b8d1ed6fa
+MISC ChangeLog 18517 SHA256 fba849f469d1f417643b42fbca29cec2805a41c355c3377cc31a507b7ed91d04 SHA512 a48e81da21745de2ea91904f0823ddb9be8ec5b9c80708f6bb5bcd3ab9af67927523332b7ce28ee80c61d68c3dc1d50c79669668694e24a52c04fdf76c5e818c WHIRLPOOL b384e8623edecd65004cc4d6f605ebf4f502c96578aafea9a360ec26c00a255bcd1fa31771e29c9aebb826cbb55cf0535401d7ddf8a12f527e6b4b538bd36362
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (SunOS)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJmZOMACgkQX3X2B8XHTokspQCcCKvTqbnJTwCFKwjVbM/r+jN8
-GzUAn3YU/29L4T7Ln+/YeD0jny6czc9N
-=N2Jf
+iKYEAREIAGYFAlKdNTFfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldEM2NzU5RjUyMDczREJDQkVDQTBDRkE1NERC
+Nzk1QThBNDI2MTgzNTQACgkQ23laikJhg1R8TgCeOu51ML9v4BZLxrR4I0ao7XV7
+jE8AnArClu/4ctNgIpR3Qwof6T+ubKxr
+=uRdm
 -----END PGP SIGNATURE-----
