@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/django
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.119 2013/10/22 11:43:30 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.120 2013/12/03 01:34:41 creffett Exp $
+
+  03 Dec 2013; Chris Reffett <creffett@gentoo.org> -django-1.4.5.ebuild,
+  -django-1.5.1.ebuild:
+  Cleanup wrt bug 489214
 
   22 Oct 2013; Fabian Groffen <grobian@gentoo.org> django-1.5.4.ebuild:
   Marked ~x64-macos, bug #487670
